--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
     </style>
-    <title>Test</title>
+    <title>Nane</title>
 </head>
 <body>
 <div class="container">
-    <p class="ml12" style="word-break: break-word">Lorem Ipsum is simply dummy text of
-        the printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a
-        galley of type and scrambled it to make a type specimen book. It has survived
-        not only five centuries, but also the leap into electronic typesetting,
-        remaining essentially unchanged. It was popularised in the 1960s with the
-        release of Letraset sheets containing Lorem Ipsum passages, and more recently
-        with desktop publishing software like Aldus PageMaker including versions of
-        Lorem Ipsum.
+    <p class="ml12" style="word-break: break-word; display: flex; flex-wrap: wrap; align-items: center; justify-content: center; text-align: center">
+        հուսամ նվերը կհավանես եթե ուզում ես իմանաս ովա նվերի հեղինակը
+        Քեզ կսպասեմ<a target="_blank" href="https://www.google.com/maps?q=40.878356,45.143630" style="text-decoration: none; margin: 0 5px">այստեղ</a>
     </p>
 </div>
+<p class="ml12 item_two">Հունիսի 24 15:00</p>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 <script src="script.js"></script>
