mi hatel update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
     </style>
     <title>Nane</title>
 </head>
@@ -15,7 +15,7 @@
 <div class="container">
     <p class="ml12" style="word-break: break-word; display: flex; flex-wrap: wrap; align-items: center; justify-content: center; text-align: center">
         հուսամ նվերը կհավանես եթե ուզում ես իմանաս ովա նվերի հեղինակը
-        Քեզ կսպասեմ<a target="_blank" href="https://www.google.com/maps?q=40.878356,45.143630" style="text-decoration: none; margin: 0 5px">այստեղ</a>
+        Քեզ կսպասեմ<a target="_blank" href="https://www.google.com/maps?q=40.878356,45.143630" style="text-decoration: none; margin: 0 5px">Այստեղ</a>
     </p>
     <p class="ml12 item_two">Հունիսի 24 15:00</p>
 </div>
