--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
 <div class="container">
-    <p class="ml12" style="word-break: break-word; display: flex; flex-wrap: wrap; align-items: center; justify-content: center; text-align: center">
-        Հուսամ նվերը կհավանես եթե ուզում ես իմանաս ովա նվերի հեղինակը
-        Քեզ կսպասեմ<a target="_blank" href="https://www.google.com/maps?q=40.878356,45.143630" style="text-decoration: none; margin: 0 5px">Այստեղ</a>
-    </p>
-    <p class="ml12 item_two">Հունիսի 24 15:00</p>
+<!--    <p class="ml12" style="word-break: break-word; display: flex; flex-wrap: wrap; align-items: center; justify-content: center; text-align: center">-->
+<!--        Հուսամ նվերը կհավանես եթե ուզում ես իմանաս ովա նվերի հեղինակը-->
+<!--        Քեզ կսպասեմ<a target="_blank" href="https://www.google.com/maps?q=40.878356,45.143630" style="text-decoration: none; margin: 0 5px">Այստեղ</a>-->
+<!--    </p>-->
+<!--    <p class="ml12 item_two">Հունիսի 24 15:00</p>-->
 </div>
 
 
