--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
     </style>
-    <title>Nane</title>
+    <title></title>
 </head>
 <body>
 <div class="container">
