--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container">
     <p class="ml12" style="word-break: break-word; display: flex; flex-wrap: wrap; align-items: center; justify-content: center; text-align: center">
-        Հուսամ նվերը կհավանես. եթե ուզում ես իմանաս ով է նվերի հեղինակը
+        Հուսամ նվերը կհավանես. եթե ուզում ես իմանաս, թե ով է նվերի հեղինակը
         Քեզ կսպասեմ<a target="_blank" href="https://www.google.com/maps?q=40.878356,45.143630" style="text-decoration: none; margin: 0 5px">Այստեղ</a>
     </p>
     <p class="ml12 item_two">Հուլիսի 1 15:00</p>
